--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Chuck Norris</string>
     <string name="next">Próximo</string>
+    <string name="previous">Anterior</string>
 </resources>
